--- a/JoinMeAndroid/app/build.gradle
+++ b/JoinMeAndroid/app/build.gradle
@@ -25,3 +25,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.google.android.gms:play-services:8.1.0'
 }
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+}
