--- a/JoinMeAndroid/app/build.gradle
+++ b/JoinMeAndroid/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -24,6 +25,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.google.android.gms:play-services:8.1.0'
+    compile 'com.microsoft.azure:azure-mobile-services-android-sdk:2.0.3'
+    compile 'com.android.support:multidex:1.0.0'
 }
 
 buildscript {
